fixed colour contrast on tag labels

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -152,7 +152,7 @@ $path: "/public/images/";
     letter-spacing: 1px;
     text-decoration: none;
     color: #FFFFFF;
-    background-color: #28a197;
+    background-color: #005ea5;
 //  border: 3px solid #0B0C0C;
 }
 
